Applied i18n patches for the product and facility applications. Thanks to Jean-Luc Malet for the patch (OFBIZ-262).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5069 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -181,8 +181,10 @@ ProductAddPrice=Add Price
 ProductAddPriceRule=Add Price Rule
 ProductAddProduct=Add Product
 ProductAddProductAttributeNameValueType=Add Product Attribute (enter Name, Value and Type)
+ProductAddProductCategoryContentFromDate=Add Product Category Content (select Content Id, enter From Date):
 ProductAddProductCategoryMember=Add Product Category Member
-ProductAddProductCategoryMemberFromDate=Add ProductCategoryMember (select Category, enter From Date)
+ProductAddProductCategoryMemberFromDate=Add Product Category Member (select Category, enter From Date)
+ProductAddProductContentFromDate=Add Product Content (select Content Id, enter From Date):
 ProductAddProductFeatureFromCategory=Add Product Feature From Category or Group
 ProductAddProductFeatureFromGroup=Add Product Feature From Group
 ProductAddProductFeatureTypeId=Add Product Feature with Type and ID Code
@@ -300,6 +302,8 @@ ProductCouldNotFindProduct=Could Not Find Product with ID
 ProductCountry=Country
 ProductCreateAProductFeatureCategory=Create a Product Feature Category
 ProductCreatedBy=Created By
+ProductCreatedByUserLogin=Created By User Login
+ProductCreatedDate=Created Date
 ProductCreateNewCatalog=Create New Catalog
 ProductCreateNewCategory=Create New Category
 ProductCreateNewFacility=Create New Facility
@@ -320,6 +324,7 @@ ProductCreateNewProductPromo= Create New ProductPromo
 ProductCreateRule=Create Rule
 ProductCurrency=Currency
 ProductCurrencyUom=Currency UOM
+ProductCurrencyUomId=Currency Uom Id
 ProductDateFilter=Date Filter
 ProductDateReceived=Date Received
 ProductDaysToShip=Days To Ship
@@ -335,6 +340,8 @@ ProductDestFacility=Dest. Facility
 ProductDestination=Destination
 ProductDestinationFacility=Destination Facility
 ProductDestinationFacilityIs=Destination Facility is
+ProductDestinationPostalAddressId=Destination Postal Address Id
+ProductDestinationPhoneNumberId=Destination Phone Number Id
 ProductDetailImage=Detail Image
 ProductDetailScreen=Detail Screen
 ProductDuplicateProduct=Duplicate Product
@@ -358,9 +365,16 @@ ProductErrorNoPackagesFoundForShipment=ERROR: No packages found for this shipmen
 ProductErrorOrderIdNotFound=ERROR: Order with ID [${orderId}] not found
 ProductErrorProductNotFound=ERROR\: Product not found
 ProductErrorType=Error\: Type
+ProductEstimatedArrivalDate=Estimated Arrival Date
+ProductEstimatedArrivalEvent=Estimated Arrival Event
+ProductEstimatedArrivalWorkEffId=Estimated Arrival Work Eff Id
 ProductEstimatedDates=Estimated Dates
 ProductEstimateId=Estimate ID
+ProductEstimatedReadyDate=Estimated Ready Date
 ProductEstimatedShipCost=Estimated Ship Cost
+ProductEstimatedShipDate=Estimated Ship Date
+ProductEstimatedShipEvent=Estimated Ship Event
+ProductEstimatedShipWorkEffId=Estimated Ship Work Eff Id
 ProductEstimatedStartArrive=Estimated (Start-Arrive)
 ProductExistingInventoryItem=Existing Inventory Item
 ProductExistingVariant= Existing Variant IDs
@@ -414,6 +428,7 @@ ProductFlatBasePrice=Flat Base Price
 ProductFlatItemPrice=Flat Item Price
 ProductFromGeo=From Geo
 ProductFromLocation=From Location
+ProductFromParty=From Party
 ProductFuturePartyRoleList=Future Party / RoleList
 ProductGeneralMessage=For something interesting make sure you are logged in, try username\:admin, password\:ofbiz
 ProductGenerateShipmentManifestReport=Generate Shipment Manifest Report
@@ -468,6 +483,7 @@ ProductInventoryXfers=Inventory Xfers
 ProductIssedOrdered=Issed  : Ordered
 ProductIssue=Issue
 ProductIssueAll=Issue All
+ProductIssuedQuantity=Issued Quantity
 ProductIssuedReservedTotalOrdered=[Issued + Reserved = Total] = Ordered
 ProductInternalName=Internal Name
 ProductItem=Item
@@ -490,6 +506,8 @@ ProductLeaveEntirePoReceiving=Leave empty for entire PO receiving
 ProductLeaveSingleProductReceiving=ProductLeave empty for single product receiving
 ProductLevel=Level
 ProductLastModifiedBy=Last Modified By
+ProductLastModifiedByUserLogin=Last Modified By User Login
+ProductLastModifiedDate=Last Modified Date
 ProductLine=Line
 ProductLinkOneImageUrl=Link One Image URL
 ProductLinkTwoImageUrl=Link Two Image URL
@@ -603,6 +621,7 @@ ProductOptionalCreateNew=optional will create new if empty
 ProductOptionalExpirationDate=Optional Expiration Date
 ProductOptionalExpiredBeforeDate=Optional Expired Before Date
 ProductOptionalFilterWithDate=Optional Filter With Date
+ProductOrderedQuantity=Ordered Quantity
 ProductOrderId=Order ID
 ProductOrderItem=Order Item
 ProductOrderItems=Order Items
@@ -615,6 +634,8 @@ ProductOriginDestinationFacility=Origin-Destination Facility
 ProductOriginDestinationPhoneId=Origin-Destination Phone ID
 ProductOriginFacility=Origin Facility
 ProductOriginFacilityIs=Origin Facility is
+ProductOriginPostalAddressId=Origin Postal Address Id
+ProductOriginPhoneNumberId=Origin Phone Number Id
 ProductOverride=Override
 ProductOverrideSimpleFields=Override Simple Fields
 ProductPackage=Package
@@ -637,6 +658,7 @@ ProductPhoneNumbers=Phone Numbers
 ProductPhysicalInventoryVariance=(This can be changed by doing a physical inventory variance below)
 ProductPhysicalInventoryVariances=Physical Inventory Variances
 ProductPiecesIncluded=Pieces Included
+ProductPlannedQuantity=Planned Quantity
 ProductPo=PO
 ProductPopulateNewForm=Populate New Form
 ProductPort=Port
@@ -654,11 +676,11 @@ ProductPrimaryCategory=Primary  Category
 ProductPrimaryOrderId=Primary Order ID
 ProductPrimaryParentCategory=Primary Parent Category
 ProductPrimaryParentGroup=Primary Parent Group
+ProductPrimaryShipGroupSeqId=Primary Ship Group Seq Id
 ProductProduct=Product
-ProductProductId=Product ID
-ProductProductIdMissing= Product Id is mandatory
 ProductProducts=Products
 ProductProductCatalogsList=Product Catalogs List
+ProductProdCatContentTypeId=Prod Cat Content Type Id
 ProductProductCategoryId=Product Category ID
 ProductProductCategoryMemberMaintenance=Product Category Member Maintenance
 ProductProductCategory=Product Category
@@ -670,7 +692,9 @@ ProductProductFeatureCategories=Product Feature Categories
 ProductProductFeatureMaintenance=Product Feature Maintenance
 ProductProductHeight=Product Height
 ProductProductId=Product ID
+ProductProductIdMissing= Product Id is mandatory
 ProductProductIdTo=Product ID To
+ProductProductJump=Product Jump
 ProductProductNameId=Product Name Id
 ProductProductName=Product Name 
 ProductProductNotFoundWithProduct=Product not found with Product ID
@@ -679,6 +703,7 @@ ProductProductPromotionsList=Product Promotions List
 ProductProductStore=Product Store
 ProductProductStoreEmailSettings= Product Store Email Settings
 ProductProductStoreGroup=Product Store Group
+ProductProductStoreGroupId=Product Store Group Id
 ProductProductStoreList=Product Store List
 ProductProductStoreKeywordOverrideSettings=Product Store Keyword Override Settings
 ProductProductStorePaymentSettings=Product Store Payment Settings
@@ -705,6 +730,7 @@ ProductPurchaseThru=Purchase Thru
 ProductPurchaseThruDate=Purchase Thru Date
 ProductPurposeTypeNotFoundWithId=Purpose Type not found with ID
 ProductQoh=QOH
+ProductQuantity=Quantity
 ProductQtyReceived=Qty Received
 ProductQtyRejected=Qty Rejected
 ProductQuantity=Quantity
@@ -717,6 +743,8 @@ ProductQuantityUomId=Quantity UomId
 ProductQuickAddVariants=Quick Add Variants
 ProductQuickShipOrder=Quick Ship Order:
 ProductQuickShipOrderFrom=Quick Ship Order From
+ProductRating=Rating
+ProductRatingTypeEnum=Rating Type Enum
 ProductReadyToPick=Ready to pick
 ProductReason=Reason
 ProductReceipt=Receipt
@@ -741,7 +769,9 @@ ProductReorderQuantity=Reorder Quantity
 ProductReplaceOriginal=Replace Original
 ProductRequireAmount=Require Amount
 ProductRequireCustomerAmount=Require the customer to enter an amount.
+ProductRequireInventory=Require Inventory
 ProductRequireInventoryForPurchase=Require Inventory For Purchase
+ProductRequirementMethodEnumId=Requirement Method Enum Id
 ProductReservationOrder=Reservation Order
 ProductReserved=Reserved
 ProductReserveInventory=Reservenventory
@@ -776,6 +806,7 @@ ProductSection=Section
 ProductSegment=Segment
 ProductSelectable=Selectable
 ProductSelectAll=Select all
+ProductSelectCategory=Select Category
 ProductSelected=Selected
 ProductSelectFacility=Select a Facility
 ProductSelectOne=Select One
@@ -800,14 +831,17 @@ ProductShipamountPrice=shipamount = shipamount + price
 ProductShipamountTotalQuantityPrice=shipamount = shipamount + (totalQuantity * price)
 ProductShipDate=Ship Date
 ProductShipmentId=Shipment ID
+ProductShipmentItemSeqId=Shipment Item Seq Id
 ProductShipmentMethod=Shipment Method
 ProductShipmentMethodType=Shipment Method Type
 ProductShipmentNotFoundId=The Shipment was not found with ID
+ProductShipmentPlanToOrderItems=Shipment Plan To Order Items
 ProductShipments=Shipments
 ProductShipmentsFound=Shipments Found
+ProductShipmentType=Shipment Type
+ProductShipmentId=Shipment Id
 ProductShipOrder=Ship Order
 ProductShippingLabel=Shipping Label
-ProductShipmentType=Shipment Type
 ProductShipMethod=Ship Method
 ProductShortDescription=Short Description
 ProductShowActive=Show Active
@@ -823,6 +857,7 @@ ProductSquareFootage=Square Footage
 ProductStandard=Standard
 ProductState=State
 ProductStatus=Status
+ProductStatusId=Status Id
 ProductStockMoves=Stock Moves
 ProductStockMovesNeeded=Stock Moves Needed
 ProductStoresFor=Stores For
@@ -863,10 +898,14 @@ ProductThruDateTimeSequence=Thru Date/Time & Sequence
 ProductTitle=Title
 ProductToFacilityContainer=To Facility / Container
 ProductToGeo=To Geo
+ProductTotIssuedQuantity=Tot Issued Quantity
 ProductToLocation=To Location
 ProductToReceive=To Receive
 ProductToPack=To Pack
+ProductToParty=To Party
 ProductToPick=To Pick
+ProductTotOrderedQuantity=Tot Ordered Quantity
+ProductTotPlannedQuantity=Tot Planned Quantity
 ProductTrack=Track
 ProductTracking=Tracking
 ProductTrackingNumber=Tracking Number
@@ -883,7 +922,12 @@ ProductUnitOfMeasureId=Unit of Measure ID
 ProductUnknownSpecifyType=Unknown; specify a type
 ProductUnknownSerialNumber=unknown, serialNumber
 ProductUomId=Uom Id
+ProductUpdateDownloadContentProduct=Update Download Content for Product
+ProductUpdateEmailContentProduct=Update Email Content for Product
+ProductUpdateExternalContentProduct=Update External Content for Product
 ProductUpdateProduct=Update Product
+ProductUpdateSimpleTextContentCategory=Update Simple Text Content for Category
+ProductUpdateSimpleTextContentProduct=Update Simple Text Content for Product
 ProductUploadCategoryImage=Upload Category Image
 ProductUploadImage=Upload Image
 ProductUploadLinkOneImage=Upload Link One Image
@@ -894,6 +938,9 @@ ProductUseDays=Use Days
 ProductUseDaysLimit=Use Days Limit
 ProductUsedForDisplayOrdering=Used For Display Ordering
 ProductUseQuickAdd=Use Quick Add
+ProductUseRole=Use Role
+ProductUseTime=Use Time
+ProductUseTimeUom=Use Time Uom
 ProductValueType=Value, Type
 ProductVariants=Variants
 ProductVariantProduct=Is VARIANT Product ?
@@ -913,7 +960,8 @@ ProductWeight=Weight
 ProductWeightUnit=Weight Unit
 ProductWeightUomId=Weight Uom Id
 ProductWidthUomId=Width Uom Id
-
+ProductWorkEffortName=Work Effort Name
+ProductWorkItem=Work Item
 
 ProductNoLongerAvailable=No Longer Available
 ProductNoProductsInThisCategory=There are no products in this category
