Applied i18n patch from Jacques Le Roux (OFBIZ-268).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5082 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -164,8 +164,8 @@ ProductActualServices=Actual Services
 ProductActualStartArrive=Actual (Start-Arrive)
 ProductActualTotal=Actual Total
 ProductActualTransport=Actual Transport
-ProductAddCatalogProdCat=Add Catalog Product Category (select Catalog and Type, then enter optional From Date)
-ProductAddCatalogProductCategory=Add Catalog Product Category (select Catalog and Type, then enter optional From Date)
+ProductAddCatalogProdCat=Add a Category to this Catalog (select Category and Type, then enter optional From Date)
+ProductAddCatalogProductCategory=Add a Catalog to this Category (select Catalog and Type, then enter optional From Date)
 ProductAddContentProduct=Add Content to Product
 ProductAddEmail=Add Email
 ProductAddFacility=Add Facility
