Appled i18n patch for surveys; thanks to Jacques Le Roux for this patch (OFBIZ-271). Also replaced some tabs with spaces.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5087 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -1092,6 +1092,7 @@ variantevents.successfully_created_variant_product_with_id=Successfully created 
 
 ProductShipmentPlanToOrderItems=Shipment Plan --> Order Items
 CommonVolume=Volume
+CommonSurveys=Surveys
 ProductShipmentPlan=Shipment Plan
 ProductConfigs=Configurations
 ProductConfigItems=Configurations
