Shipment pages migrated to screens. Now everything in the facility application is converted to screen widget EXCEPT the QuickShipOrder page: I don't know if it's still used (and how) so I've not modified it.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5091 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -458,6 +458,7 @@ ProductIncludeSubCategories=Include Sub-Categories
 ProductIncomingShipments=Incoming Shipments
 ProductIncomingProductionRuns=Incoming Production Runs
 ProductOutgoingProductionRuns=Outgoing Production Runs
+ProductOutgoingShipments=Outgoing Shipments
 ProductInitialInventoryItemStatus=Initial Inventory Item Status
 ProductInputOperatorValue=Input, Operator & Value
 ProductInsertDefaultImageUrl=Insert Default Image URL
