Applied l10n patch from Jacques Le Roux, Jira OFBIZ-272
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5112 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -84,6 +84,7 @@ CommonAttn=Attn
 CommonAugust=August
 CommonAvailable=Available
 CommonBack=Back
+CommonBackTo=Back to
 CommonBackToList=Back To List
 CommonBackToOptions=Back to Options
 CommonBenefit=Benefit
@@ -270,6 +271,7 @@ CommonRun=Run
 CommonSaturday=Saturday
 CommonSave=Save
 CommonSavings=Savings
+CommonSearch=Search
 CommonSearchResultfor=Search Results for
 CommonSecurity=Security
 CommonSelectAll=Select All
