implemented gift certificates
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5118 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/payment.properties
+++ b/applications/accounting/config/payment.properties
@@ -1,5 +1,5 @@
 ####
-# Payment Processor Configuration File 
+# Payment Processor Configuration File
 # $Id$
 ####
 
@@ -16,6 +16,29 @@ payment.general.reauth.amex.days=30
 payment.general.reauth.mc.days=30
 payment.general.reauth.visa.days=7
 payment.general.reauth.other.days=7
+
+############################################
+# General Gift Certificate Configuration
+############################################
+
+# Fulfillment (purchase) Information Survey ID (survey for sending gift card email)
+payment.giftcert.purchase.surveyId=1000
+
+# Survey question (description field) which contains the recipient's email address
+payment.giftcert.purchase.survey.sendToEmail=recipientEmail
+
+# Survey question (description field) which contains the "copy me" flag
+payment.giftcert.purchase.survey.copyMe=copyMe
+
+# Fulfillment (reload) Information Survey ID (survey for reloading gift cards)
+payment.giftcert.reload.surveyId=1001
+
+# Survey question (description field) which contains the card number
+payment.giftcert.reload.survey.cardNumber=giftCardNumber
+
+# Survey question (description field) which contains the pin number
+payment.giftcert.reload.survey.pinNumber=giftCardPin
+
 
 ############################################
 # CyberSource Configuration
@@ -119,24 +142,6 @@ payment.valuelink.timeout=34
 
 # Debug mode dumps all request/response info to the console (Y|N)
 payment.valuelink.debug=Y
-
-# Fulfillment (purchase) Information Survey ID (survey for sending gift card email)
-payment.valuelink.purchase.surveyId=1000
-
-# Survey question (description field) which contains the recipient's email address
-payment.valuelink.purchase.survey.sendToEmail=recipientEmail
-
-# Survey question (description field) which contains the "copy me" flag
-payment.valuelink.purchase.survey.copyMe=copyMe
-
-# Fulfillment (reload) Information Survey ID (survey for reloading gift cards)
-payment.valuelink.reload.surveyId=1001
-
-# Survey question (description field) which contains the card number
-payment.valuelink.reload.survey.cardNumber=giftCardNumber
-
-# Survey question (description field) which contains the pin number
-payment.valuelink.reload.survey.pinNumber=giftCardPin
 
 # Certificate alias to pass for client auth
 payment.valuelink.certificateAlias=
