Applied patch from Si Chen with Facility Owner updates; Jira #OFBIZ-274
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5119 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -400,6 +400,7 @@ ProductFacilityLocation=Facility Location
 ProductFacilityLocations=Facility Locations
 ProductFacilityManagerApplication=Facility Manager Application
 ProductFacilityNameId=Facility Name [ID]
+ProductFacilityOwner=Owner
 ProductFacilityRoleMemberMaintenance=Facility Role Member Maintenance
 ProductFacilityType=Facility Type
 ProductFacilityTypeId=Facility Type ID
