Finished initial implementation of screen based order notice emails, re-uses the existing orderstatus ftl files and bsh script; this makes them more flexible, easier to keep up-to-date, and adds in a number of new features and more information to the email messages
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5122 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -237,6 +237,7 @@ ProductBasePrc=Base Prc
 ProductBillingWeightUom=Billing Weight &amp; UOM
 ProductBinNum=Bin Num
 ProductBinNumber=Bin Number
+ProductBodyScreenLocation=Body Screen Location
 ProductBox=Box
 ProductBrandName=Brand Name
 ProductBrowseCatalogs=Browse Catalogs
