Applied i18n and l10n correction patches from Jacques Le Roux; Jira #OFBIZ-279
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5132 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/specialized/opentravelsystem/config/EcommerceUiLabels.properties
+++ b/specialized/opentravelsystem/config/EcommerceUiLabels.properties
@@ -178,8 +178,8 @@ EcommerceAddCheckedToCart=Add Checked to Cart
 EcommerceAddChildListsToCart=Add This List And Child List(s) To Cart
 EcommerceAddListToCart=Add List To Cart
 EcommerceAddSelectedtoList=Add Selected To List
-EcommerceAddToCart=Add to Cart
-EcommerceAddToShoppingList=Add To Shopping List
+EcommerceAddtoCart=Add to Cart
+EcommerceAddtoShoppingList=Add To Shopping List
 EcommerceAdjustment=Adjustment
 EcommerceAdjustments=Adjustments
 EcommerceAlwaysViewCartAfterAddingAnItem=Always view cart after adding an item
