Added QuoteRole management (screens and services).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5139 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -38,6 +38,7 @@ OrderCreateOrderQuote = Create New Quote
 OrderCreateOrderQuoteAttribute = Create New Quote Attribute
 OrderCreateOrderQuoteCoefficient = Create New Quote CoefficientOrderCreateReturn=Create return
 OrderCreateOrderQuoteItem = Create New Quote Item
+OrderCreateOrderQuoteRole = Create New Quote Role
 OrderCreateReturn = Create return
 OrderCreatedBy = Created by
 OrderCurrentStatus = Current Status
@@ -128,6 +129,7 @@ OrderOrderQuoteItems = Quote Items
 OrderOrderQuoteManualUnitPrice = Manual Unit Price
 OrderOrderQuotePercent = Quote Percent
 OrderOrderQuotePrices = Quote Prices
+OrderOrderQuoteRoles = Quote Roles
 OrderOrderQuoteSkillTypeId = Quote Skill Type Id
 OrderOrderQuoteTypeId = Quote Type Id
 OrderOrderQuoteUnitPrice = Quote Unit Price
