Fixed a whole bunch of issues and annoyances in the ecommerce CommunicationEvent stuff; some table to CSS formatting conversions too, especially in the viewprofile page
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5142 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/ecommerce/config/EcommerceUiLabels.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels.properties
@@ -387,7 +387,8 @@ EcommerceViewAll=View All
 EcommerceViewAllPromotions=View All Promotions
 EcommerceViewCart=View Cart
 EcommerceViewList=View List
-EcommerceViewSent=View Sent
+EcommerceViewReceivedOnly=View Received Messages
+EcommerceViewSent=View Sent and Received
 EcommerceYouHave=You have
 EcommerceYouHaveBeenSent=You have been sent a
 EcommerceYouMightAlsoIntrested=You might also be interested in
