Applied various patches from Jacques Le Roux for various i18n and l10n issues; Jira #OFBIZ-282
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5151 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -22,33 +22,9 @@
 #  THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
 #  $Id: CommonScreens.xml 2951 2004-08-03 16:33:32Z jonesde $
-
 #languages/locales
-bu=Bulgarian
-cz=Czeck
-de=German
-en=English
-en_GB=British English
-es=Spanish
-fr=French
-gr=Greek
-pt=Portuguese
-pt_PT=Portuguese Portugal
-pt_BR=Portuguese Brazil
-zh=Chinese
-
-#application names
 Accounting=Accounting
 Catalog=Catalog
-Content=Content
-Facility=Facility
-Manufacturing=Manufacturing
-Marketing=Marketing
-Order=Order
-Party=Party
-WebTools=WebTools
-WorkEffort=WorkEffort
-
 CommonAccepted=Accepted
 CommonAccounting=Accounting
 CommonActiveInactive=Active and Inactive
@@ -58,8 +34,9 @@ CommonAddA=Add a
 CommonAddDefault=Add Default
 CommonAddId=Add ID
 CommonAddNew=Add New
-CommonAddresses=Addresses
+CommonAddProblem=Add Problem
 CommonAddressLine=Address Line
+CommonAddresses=Addresses
 CommonAll=All
 CommonAllDay=All Day
 CommonAllMethods=All methods
@@ -78,6 +55,7 @@ CommonApply=Apply
 CommonApril=April
 CommonArea=Area
 CommonAreaCode=Area Code
+CommonAssociate=Associate
 CommonAt=At
 CommonAttentionName=Attention Name
 CommonAttn=Attn
@@ -92,6 +70,7 @@ CommonBy=By
 CommonCancel=Cancel
 CommonCancelAll=Cancel All
 CommonChange=Change
+CommonChecked=Checked
 CommonChecking=Checking
 CommonCheckoutAnonymous=Checkout Without Login
 CommonCheckoutAnonymousMsg=You may checkout without creating an account
@@ -99,14 +78,18 @@ CommonChooseLanguage=Choose Language
 CommonCity=City
 CommonClear=Clear
 CommonClickHere=Click Here
-CommonComingSoon=Coming Soon\!
+CommonClose=Close
+CommonComingSoon=Coming Soon!
 CommonComment=Comment
 CommonComments=Comments
+CommonConfiguration=Configuration
+CommonContactMechID=Contact MechI D
+CommonContactPurpose=Contact Purpose
 CommonContactUs=Contact Us
 CommonContacts=Contacts
 CommonContent=Content
 CommonContinue=Continue
-CommonCopy=Copy 
+CommonCopy=Copy
 CommonCouldBeUsedAs=Could be Used as
 CommonCountry=Country
 CommonCounty=County
@@ -115,11 +98,14 @@ CommonCreate=Create
 CommonCreateNew=Create New
 CommonCreated=Created
 CommonCreatedBy=Created By
+CommonCredit=Credit
 CommonCurrent=Current
+CommonDatabaseProblem=Database Problem
 CommonDate=Date
 CommonDateFilter=Date Filter
 CommonDay=Day
 CommonDays=Days
+CommonDebit=Debit
 CommonDecember=December
 CommonDelete=Delete
 CommonDeleteAll=Delete All
@@ -138,7 +124,7 @@ CommonEnabled=Enabled
 CommonEndDateTime=End Date/Time
 CommonEventDate=EventDate
 CommonExpire=Expire
-CommonExpireAll=Expire All 
+CommonExpireAll=Expire All
 CommonExpireDate=Expire Date
 CommonExpires=Expires
 CommonExt=ext
@@ -146,7 +132,6 @@ CommonFebruary=February
 CommonFieldsMarkedAreRequired=Fields marked with (*) are required.
 CommonFind=Find
 CommonFindAll=Find All
-CommonFinishDate=Finish Date
 CommonFinishDate=Finish Date/Time
 CommonFollowingErrorsOccurred=The Following Errors Occurred
 CommonFollowingOccurred=The Following Occurred
@@ -170,11 +155,13 @@ CommonGroup=Group
 CommonHideFields=Hide Fields
 CommonHour=Hour
 CommonId=ID
+CommonIdAlreadyExist=Id Already Exist
 CommonIdCode=ID Code
 CommonIdentifier=Identifier
 CommonIds=IDs
 CommonInThe=In The
 CommonInformation=Information
+CommonInput=Input
 CommonInto=Into
 CommonIntroductionDate=Introduction Date
 CommonItem=Item
@@ -211,7 +198,7 @@ CommonNew=New
 CommonNewSelection=New Selection
 CommonNewUser=New User
 CommonNext=Next
-CommonNo=No 
+CommonNo=No
 CommonNoAddress=No Address
 CommonNoContactInformationOnFile=No contact information on file
 CommonNoElementFound=No element found
@@ -237,14 +224,17 @@ CommonOr=OR
 CommonOrder=Order
 CommonOrders=Orders
 CommonOverridesSelection=(overrides either of the above selections.)
+CommonPage=Page
+CommonPartyID=Party Id
 CommonPassword=Password
+CommonPerform=Perform
+CommonPermissionError=Permission Error
 CommonPerson=Person
 CommonPrevious=Previous
 CommonPriority=Priority
 CommonProfile=Profile
 CommonProvince=Province
 CommonQualifier=Qualifier
-CommonQuantity=EventQuantity
 CommonQuantity=Quantity
 CommonQuarter=Quarter
 CommonQuickAdd=Quick Add
@@ -256,9 +246,8 @@ CommonRed=Red
 CommonRefresh=Refresh
 CommonRegistred=Registered User
 CommonRejected=Rejected
-CommonRemove=Enlever
 CommonRemove=Remove
-CommonRemoveExpired=Remove Expired 
+CommonRemoveExpired=Remove Expired
 CommonReports=Reports
 CommonRequired=Required
 CommonRequiredFieldsFoundEmpty=The Following Required Fields Where Found Empty
@@ -286,11 +275,13 @@ CommonSequence=Sequence
 CommonSequenceNum=Sequence Num
 CommonSet=Set
 CommonSetNowEmpty=(Will be set to now if empty)
+CommonShow=Show
 CommonShowAll=Show All
 CommonShowAllRecords=Show all records
 CommonShowLookupFields=Show Lookup Fields
 CommonSince=Since
 CommonSmall=Small
+CommonSorryYouCannotSend=Sorry, you cannot send this page to a friend.  Select rather from a category or an item
 CommonSpecified=Specified
 CommonStartDate=Start Date
 CommonStartDateTime=Start Date/Time
@@ -305,6 +296,8 @@ CommonSubtotal=Subtotal
 CommonSunday=Sunday
 CommonTellAFriend=Tell-A-Friend
 CommonTest=Test
+CommonTheFollowingErrorsOccurred=The following errors occurred
+CommonTheFollowingOccurred=The following occurred
 CommonTheOpenForBusinessProject=The Open For Business Project
 CommonThis=This
 CommonThru=Thru
@@ -316,24 +309,28 @@ CommonTitle=Title
 CommonTo=To
 CommonToName=To Name
 CommonToday=Today
-CommonTotal=Total   
+CommonTotal=Total
 CommonTuesday=Tuesday
 CommonUnitPrice=Unit Price
 CommonUntil=Until
 CommonUom=UOM
 CommonUpdate=Update
+CommonUpdateLink=Update link
 CommonUpdated=Updated
 CommonUpdatedEffectiveThru=Updated Effective Thru
 CommonUsed=Used
 CommonUsedAs=Used as
 CommonUsername=Username
+CommonValidate=Validate
+CommonValidityProblem=Validity problem
 CommonValue=Value
 CommonView=View
 CommonViewCalendar=View Calendar
+CommonVolume=Volume
 CommonWednesday=Wednesday
 CommonWeek=Week
 CommonWelcome=Welcome
-CommonWendesday=Wendesday
+CommonWednesday=Wednesday
 CommonWhere=Where
 CommonWorkflowActivityUser=Workflow Activities Assigned to User
 CommonWorkflowActivityUserRole=Workflow Activities Assigned to User Role
@@ -341,12 +338,29 @@ CommonY=Y
 CommonYes=Yes
 CommonYouremail=Your email
 CommonZipPostalCode=Zip/Postal Code
-
+Content=Content
+Facility=Facility
 Factoids=Did you know?
+Manufacturing=Manufacturing
+Marketing=Marketing
 MostRecentlyViewed=Recently Viewed
-
-PartyPartyID=Party ID
+NoUomConversionFound=UOM Conversion Relationship Not Found
+Order=Order
+Party=Party
 PartyContactMechID=Contact Mechanism ID
 PartyContactPurpose=Contact Purpose
-
-NoUomConversionFound=UOM Conversion Relationship Not Found
+PartyPartyID=Party ID
+WebTools=WebTools
+WorkEffort=WorkEffort
+bu=Bulgarian
+cz=Czeck
+de=German
+en=English
+en_GB=British English
+es=Spanish
+fr=French
+gr=Greek
+pt=Portuguese
+pt_BR=Portuguese Brazil
+pt_PT=Portuguese Portugal
+zh=Chinese
