--- a/framework/service/config/ServiceErrorUiLabels.properties
+++ b/framework/service/config/ServiceErrorUiLabels.properties
@@ -10,17 +10,16 @@
 ###################################################################
 ###################################################################
 ####
-# OFBiz UiLabel Properties used for errors messages in the 
+# OFBiz UiLabel Properties used for errors messages in the
 # Service module
 #
-
-
 ##################################################################
 # ServiceUtil
 ##################################################################
-serviceUtil.party_id_missing=Party ID missing
-serviceUtil.no_permission_to_operation=You do not have permission to perform this operation for this party
-serviceUtil.no_permission_to_run=You do not have permission to run this service
-serviceUtil.unable_to_cancel_job=Unable to cancel job
-serviceUtil.unable_to_cancel_job_retries=Unable to cancel job retries			
-			
+#
+ModelService.following_required_parameter_missing = The following required parameter is missing:
+serviceUtil.no_permission_to_operation = You do not have permission to perform this operation for this party
+serviceUtil.no_permission_to_run = You do not have permission to run this service
+serviceUtil.party_id_missing = Party ID missing
+serviceUtil.unable_to_cancel_job = Unable to cancel job
+serviceUtil.unable_to_cancel_job_retries = Unable to cancel job retries
