--- a/applications/accounting/config/payment.properties
+++ b/applications/accounting/config/payment.properties
@@ -163,7 +163,7 @@ payment.valuelink.publicValue=
 ############################################
 
 # Path the the VeriSign Certificate
-payment.verisign.certsPath=[PayFlow Pro Certs Dir]
+payment.verisign.certsPath=${env.ofbiz.home}/applications/accounting/pfcerts
 
 # Address and port of the payment processor
 payment.verisign.hostAddress=test-payflow.verisign.com
@@ -177,6 +177,9 @@ payment.verisign.partner=[PayFlow Partner]
 
 # Use Address Verification
 payment.verisign.checkAvs=Y
+
+# Require CVV2 Verification
+payment.verisign.checkCvv2=Y
 
 # Pre-Authorize Payments (if set to N will auto-capture)
 payment.verisign.preAuth=Y
