Changed product detail and order detail to show product quantity, pieces, weight, height, width and depth information as applicable
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5161 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/ecommerce/config/EcommerceUiLabels.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels.properties
@@ -106,6 +106,7 @@ CommonCreateNew=Create new
 CommonDate=Date
 CommonDays=Days
 CommonDelete=Delete
+CommonDepth=Depth
 CommonDescription=Description
 CommonDetails=Details
 CommonEdit=Edit
@@ -121,6 +122,7 @@ CommonFrom=From
 CommonGetPasswordHint=Get password hint
 CommonGoBack=Go back
 CommonGotoParent=Go to parent
+CommonHeight=Height
 CommonIn=In
 CommonInThe=In the
 CommonInformation=Information
@@ -181,7 +183,9 @@ CommonUsedAs=UsedAs
 CommonUsername=Username
 CommonView=View
 CommonWelcome=Welcome
+CommonWeight=Weight
 CommonWhere=Where
+CommonWidth=Width
 CommonYear=Year
 CommonYes=Yes
 CommonYouremail=Your email
