--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -109,6 +109,7 @@ CommonDebit=Debit
 CommonDecember=December
 CommonDelete=Delete
 CommonDeleteAll=Delete All
+CommonDepth=Depth
 CommonDescription=Description
 CommonDetail=Detail
 CommonDetails=Details
@@ -152,6 +153,7 @@ CommonGetPasswordHint=Get Password Hint
 CommonGoBack=Go Back
 CommonGotoParent=Go To Parent
 CommonGroup=Group
+CommonHeight=Height
 CommonHideFields=Hide Fields
 CommonHour=Hour
 CommonId=ID
@@ -330,8 +332,9 @@ CommonVolume=Volume
 CommonWednesday=Wednesday
 CommonWeek=Week
 CommonWelcome=Welcome
-CommonWednesday=Wednesday
+CommonWeight=Weight
 CommonWhere=Where
+CommonWidth=Width
 CommonWorkflowActivityUser=Workflow Activities Assigned to User
 CommonWorkflowActivityUserRole=Workflow Activities Assigned to User Role
 CommonY=Y
