New ui labels for financial statements
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5168 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -26,10 +26,12 @@ AccountingAgreementItems=Agreement Items
 AccountingAgreements=Agreements
 AccountingAgreementTerms=Agreement Terms
 AccountingAmount=Amount
+AccountingAssets=Assets
 AccountingAnyInvoiceStatus=Any Invoice Status
 AccountingAnyPaymentMethod=Any Payment Method
 AccountingAnyPaymentStatus=Any Payment Status
 AccountingBankName=Bank Name
+AccountingBalanceSheet=Balance Sheet
 AccountingBillingMenu=Billing Accounts
 AccountingBillingAccount=Billing Acct
 AccountingBillingAccountInvoices=Billing Account Invoices
@@ -73,6 +75,7 @@ AccountingEditPayment=Edit Payment
 AccountingEffective=Effective
 AccountingEffectiveDate=Effective Date
 AccountingEFTAccount=EFT Account
+AccountingEquities=Equities
 AccountingExpirationDate=Expiration Date
 AccountingFindInvoices=Find Invoices
 AccountingFindPayments=Find Payments
@@ -95,6 +98,7 @@ AccountingFromParty=From Party
 AccountingFromPartyId=From Party ID
 AccountingGlAcc=GL Account
 AccountingHideFields=Hide Fields
+AccountingIncomeStatement=Income Statement
 AccountingInformation=Information
 AccountingInvoiceDate=Invoice Date
 AccountingInvoiceID=InvoiceID
@@ -107,6 +111,7 @@ AccountingInvoices=Invoices
 AccountingInvoicePayments=Invoice Payments
 AccountingInvoiceTotal=Invoice Total
 AccountingLastNameCard=Last Name on Card
+AccountingLiabilities=Liabilities
 AccountingLineTotal=Line Total
 AccountingLookupInvoices=Lookup Invoices
 AccountingLookupPayment=Lookup Payment
@@ -119,6 +124,7 @@ AccountingMethod=Method
 AccountingMiddleNameCard=Middle Name on Card
 AccountingName=Name
 AccountingNameAccount=Name on Account
+AccountingNetIncome=Net Income
 AccountingNewAccount=New Account
 AccountingNewAgreement=Create Agreement
 AccountingNewAgreementItem=Create Agreement Item
@@ -156,6 +162,7 @@ AccountingProduct=Product
 AccountingQuantity=Quantity
 AccountingReferenceNumber=Reference Number
 AccountingReceivePayment=Receive Payment
+AccountingReports=Reports
 AccountingRoutingNumber=Routing Number
 AccountingStatus=Status
 AccountingSuffixCard=Suffix on Card
@@ -192,3 +199,13 @@ PartyTerms=Terms
 PartyTerm=Term
 PartyTermType=Term Type
 PartyTermValue=Term Value
+
+Organization=Organization
+FromTimePeriod=From Time Period
+ThruTimePeriod=Thru Time Period
+GlFiscalType=Fiscal Type
+isClosed=CLOSED
+isNotClosed=NOT CLOSED
+TimePeriod=Time Period
+ByTimePeriod=By Time Period
+ByDate=By Date
