Fixed a little bug in ui lables file.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5171 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -36,7 +36,8 @@ OrderCreateNewReturn = Create new return
 OrderCreateOrder = Create Order
 OrderCreateOrderQuote = Create New Quote
 OrderCreateOrderQuoteAttribute = Create New Quote Attribute
-OrderCreateOrderQuoteCoefficient = Create New Quote CoefficientOrderCreateReturn=Create return
+OrderCreateOrderQuoteCoefficient = Create New Quote Coefficient
+OrderCreateReturn=Create return
 OrderCreateOrderQuoteItem = Create New Quote Item
 OrderCreateOrderQuoteRole = Create New Quote Role
 OrderCreateReturn = Create return
