--- a/framework/security/config/security.properties
+++ b/framework/security/config/security.properties
@@ -32,7 +32,7 @@ password.encrypt.hash.type=SHA
 
 # -- this is helpful to recover old accounts or to be able to login at all sometimes --
 # -- SHOULD GENERALLY NOT BE TRUE FOR PRODUCTION SITES, but is useful for interim periods when going to password encryption --
-password.accept.encrypted.and.plain=true
+password.accept.encrypted.and.plain=false
 
 # -- should we convert usernames and passwords to lowercase? (useful for case insensitive usernames and passwords) --
 username.lowercase=false
