Added missing ui label.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5180 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -128,6 +128,7 @@ OrderOrderQuoteItem = Quote Item
 OrderOrderQuoteItemSeqId = Quote Item Seq Id
 OrderOrderQuoteItems = Quote Items
 OrderOrderQuoteManualUnitPrice = Manual Unit Price
+OrderOrderQuoteName = Quote Name
 OrderOrderQuotePercent = Quote Percent
 OrderOrderQuotePrices = Quote Prices
 OrderOrderQuoteRoles = Quote Roles
